--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
 			<a class="brand" href="/">Progres Harian</a>
 			<nav>
 				<a href="/">Dashboard</a>
+				<a href="/saldo">Saldo</a>
 				<a href="/reports">Laporan</a>
 				<a href="/admin/" target="_blank">Admin</a>
 				<button id="themeToggle" class="btn theme-toggle" type="button">Tema</button>
